# bilde

./: .gitignore  CMakeList.txt  CMakeLists.txt  Makefile  README.md  compile_static_mxe.sh  pyproject.toml  setup.py
include/: bilde.hpp  component_set.hpp  config.hpp  config.hpp.in  debug.hpp  ihi_extractor.hpp  pixel_metrics.hpp  static_vector.hpp  version.hpp  wrapping_api.hpp
include/containers/: boost_numpy_container.hpp  buffer_container.hpp  cvmat_container.hpp  iplimage_container.hpp  mxarray_container.hpp  nppybind11_container.hpp  octave_container.hpp  pybind_container.hpp
include/io/: libpng.hpp  libtiff.hpp
include/methods/: binarization.hpp  enhance_grayscale.hpp  page_segmation.hpp
include/operations/: colorspace.hpp  connected_component_labeling.hpp  essential.hpp  integral_histograms.hpp  integral_images.hpp  lbp.hpp  seam_carving.hpp
include/util/: argv.hpp  knn.hpp  simple_matrix.hpp  timer.hpp
mex/: BildeExporter.py  declarations.cc  declarations.py  declarations_helper.hpp  mex_exporter.hpp  mex_wrapper.py  parse_cc.py  parse_declarations.py
pybilde/: __init__.py  bildepybind.cc
pybilde/util/: __init__.py  srs.py
sample_data/: bw_text.tiff
src/: Makefile  bildepybind.cc  binarize  binarize.cc  connected_components_labeling.cc  enhace_grayscale.cc  lbpFeatures.cc  lbpFeatures2  lbpFeatures2.cc  lbpTransform.cc  npbilde.cc  test.cc  test_png.cc  textline_segment.cc  wi_retrieve.cc
test/test_bilde/: test_io.cc  test_wrapping_api.cc
